--- a/environment.yml
+++ b/environment.yml
@@ -1,1 +1,17 @@
-
+name: 'cookie-dash'
+channels:
+    - conda-forge
+    - defaults
+dependencies:
+    - python=3.11
+    - ipykernel==6.29.5
+    - nb_conda_kernels==2.5.1
+    - altair-all==5.5.0
+    - dash==2.18.2
+    - dash-bootstrap-components==1.7.1
+    - plotly==6.0.0
+    - tabulate==0.9.0  # df.to_markdown()
+    - lxml==5.3.0  # pd.read_html()
+    - pip
+    - pip:
+        - dash-vega-components==0.11.0
