--- a/environment.yml
+++ b/environment.yml
@@ -4,16 +4,17 @@ channels:
     - defaults
 dependencies:
     - python=3.11
-    - ipykernel==6.29.5
-    - nb_conda_kernels==2.5.1
-    - altair-all==5.5.0
-    - dash==2.18.2
-    - dash-bootstrap-components==1.7.1
-    - plotly==6.0.0
-    - tabulate==0.9.0  # df.to_markdown()
-    - lxml==5.3.0  # pd.read_html()
-    - pandas==2.2.3
-    - numpy==2.0.1
+    - ipykernel==6.29.*
+    - nb_conda_kernels==2.5.*
+    - altair-all==5.5.*
+    - dash==2.18.*
+    - dash-bootstrap-components==1.7.*
+    - plotly==6.0.*
+    - tabulate==0.9.*  # df.to_markdown()
+    - lxml==5.3.*  # pd.read_html()
+    - pandas==2.2.*
+    - numpy==2.0.*
     - pip
     - pip:
-        - dash-vega-components==0.11.0
+        - dash-vega-components==0.11.*
+        - flask_caching==2.3.*
